--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/custom.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
+        <script src="//use.typekit.net/bqt8bal.js"></script>
+        <script>try{Typekit.load();}catch(e){}</script>
+
+
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -22,7 +28,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Boilerplate.</p>
+        <h1>Kilian Frey</h1>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
