--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/custom.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
+
 
         <script src="//use.typekit.net/bqt8bal.js"></script>
         <script>try{Typekit.load();}catch(e){}</script>
@@ -23,12 +26,51 @@
 
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <h1>Kilian Frey</h1>
+        <!-- Personal info -->
+
+         <div class="pure-g">
+            <div class="pure-u-1-6"></div>
+            <div class="pure-u-2-3">
+            </div>
+            <div class="pure-u-1-6"></div>
+        </div>
+
+        <!-- Piece 1 -->
+
+        <div class="pure-g images">
+            <div class="pure-u-1-6"></div>
+            <div class="pure-u-2-3">
+                <div class="pure-g">
+                    <div class="pure-u-3-4">
+                        <img src="img/project-1-homepage.jpg">
+                    </div>
+                    <div class="pure-u-1-4">
+                        <img src="img/project-1-homepage-mobile.png">
+                    </div>
+                </div>
+            </div>
+            <div class="pure-u-1-6"></div>
+        </div>
+
+        <div class="pure-g info">
+            <div class="pure-u-1-6"></div>
+            <div class="pure-u-2-3">
+                <h2>University of Washington Homepage</h2>
+                <p><b>Responsibilities:</b> Design, HTML, and CSS. Assitance in JS and PHP</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+            </div>
+            <div class="pure-u-1-6"></div>
+        </div>
+
+
+
+        <!-- Piece 2 -->
+
+
+
+
+        <!-- Piece 3 -->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
