--- a/index.html
+++ b/index.html
@@ -29,28 +29,38 @@
 
         <!-- Personal info -->
 
-         <div class="pure-g">
-            <div class="pure-u-1-6"></div>
-            <div class="pure-u-2-3">
+        <div class="pure-g images">
+            <div class="pure-u-1-8"></div>
+            <div class="pure-u-3-4">
+                
+                <h1>Kilian Frey</h1>
+                <p>Design & front-end development</p>
+                <ul>
+                    <li><a href="docs/resume-kilian-frey.doc">resumé</a></li>
+                    <li><a href="https://www.linkedin.com/pub/dir/Kilian/Frey">linkedin</a></li>
+                    <li><a href="mailto:kilian.frey@gmail.com">email</a></li>
+                </ul>
+    
+
             </div>
-            <div class="pure-u-1-6"></div>
+            <div class="pure-u-1-8"></div>
         </div>
 
         <!-- Piece 1 -->
 
         <div class="pure-g images">
-            <div class="pure-u-1-6"></div>
-            <div class="pure-u-2-3">
+            <div class="pure-u-1-8"></div>
+            <div class="pure-u-3-4">
                 <div class="pure-g">
-                    <div class="pure-u-3-4">
+                    <div class="pure-u-3-4 desktop">
                         <img src="img/project-1-homepage.jpg">
                     </div>
-                    <div class="pure-u-1-4">
+                    <div class="pure-u-1-4 mobile">
                         <img src="img/project-1-homepage-mobile.png">
                     </div>
                 </div>
             </div>
-            <div class="pure-u-1-6"></div>
+            <div class="pure-u-1-8"></div>
         </div>
 
         <div class="pure-g info">
