--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- Personal info -->
 
-        <div class="pure-g images">
+        <div class="pure-g header">
             <div class="pure-u-1-8"></div>
             <div class="pure-u-3-4">
                 
