--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="pure-g header">
             <div class="pure-u-1-8"></div>
             <div class="pure-u-3-4">
-                
+
                 <h1>Kilian Frey</h1>
                 <p>Design & front-end development</p>
                 <ul>
@@ -47,6 +47,8 @@
         </div>
 
         <!-- Piece 1 -->
+
+<div class="project project-1">
 
         <div class="pure-g images">
             <div class="pure-u-1-8"></div>
@@ -73,7 +75,99 @@
             <div class="pure-u-1-6"></div>
         </div>
 
+</div>
 
+
+
+
+<div class="project project-2 dark">
+
+        <div class="pure-g images">
+            <div class="pure-u-1-8"></div>
+            <div class="pure-u-3-4">
+                <div class="pure-g">
+                    <div class="pure-u-3-4 desktop">
+                        <img src="img/project-2-boundless.jpg">
+                    </div>
+                    <div class="pure-u-1-4 mobile">
+                        <img src="img/project-2-boundless-mobile.png">
+                    </div>
+                </div>
+            </div>
+            <div class="pure-u-1-8"></div>
+        </div>
+
+        <div class="pure-g info">
+            <div class="pure-u-1-6"></div>
+            <div class="pure-u-2-3">
+                <h2>University of Washington Homepage</h2>
+                <p><b>Responsibilities:</b> Design, HTML, and CSS. Assitance in JS and PHP</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+            </div>
+            <div class="pure-u-1-6"></div>
+        </div>
+
+</div>
+
+
+<div class="project project-3">
+
+        <div class="pure-g images">
+            <div class="pure-u-1-8"></div>
+            <div class="pure-u-3-4">
+                <div class="pure-g">
+                    <div class="pure-u-3-4 desktop">
+                        <img src="img/project-3-brand.jpg">
+                    </div>
+                    <div class="pure-u-1-4 mobile">
+                        <img src="img/project-3-brand-mobile.png">
+                    </div>
+                </div>
+            </div>
+            <div class="pure-u-1-8"></div>
+        </div>
+
+        <div class="pure-g info">
+            <div class="pure-u-1-6"></div>
+            <div class="pure-u-2-3">
+                <h2>University of Washington Homepage</h2>
+                <p><b>Responsibilities:</b> Design, HTML, and CSS. Assitance in JS and PHP</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+            </div>
+            <div class="pure-u-1-6"></div>
+        </div>
+
+</div>
+
+
+<div class="project project-4 dark">
+
+        <div class="pure-g images">
+            <div class="pure-u-1-8"></div>
+            <div class="pure-u-3-4">
+                <div class="pure-g">
+                    <div class="pure-u-3-4 desktop">
+                        <img src="img/project-4-admissions.jpg">
+                    </div>
+                    <div class="pure-u-1-4 mobile">
+                        <img src="img/project-4-admissions-mobile.png">
+                    </div>
+                </div>
+            </div>
+            <div class="pure-u-1-8"></div>
+        </div>
+
+        <div class="pure-g info">
+            <div class="pure-u-1-6"></div>
+            <div class="pure-u-2-3">
+                <h2>University of Washington Homepage</h2>
+                <p><b>Responsibilities:</b> Design, HTML, and CSS. Assitance in JS and PHP</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+            </div>
+            <div class="pure-u-1-6"></div>
+        </div>
+
+</div>
 
         <!-- Piece 2 -->
 
