--- a/index.html
+++ b/index.html
@@ -169,6 +169,36 @@
 
 </div>
 
+
+<div class="project project-5">
+
+        <div class="pure-g images">
+            <div class="pure-u-1-8"></div>
+            <div class="pure-u-3-4">
+                <div class="pure-g">
+                    <div class="pure-u-3-4 desktop">
+                        <img src="img/project-5-ima.jpg">
+                    </div>
+                    <div class="pure-u-1-4 mobile">
+                        <img src="img/project-5-ima-mobile.png">
+                    </div>
+                </div>
+            </div>
+            <div class="pure-u-1-8"></div>
+        </div>
+
+        <div class="pure-g info">
+            <div class="pure-u-1-6"></div>
+            <div class="pure-u-2-3">
+                <h2>University of Washington Homepage</h2>
+                <p><b>Responsibilities:</b> Design, HTML, and CSS. Assitance in JS and PHP</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+            </div>
+            <div class="pure-u-1-6"></div>
+        </div>
+
+</div>
+
         <!-- Piece 2 -->
 
 
