--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="pure-u-3-4">
 
                 <h1>Kilian Frey</h1>
-                <p>Design & front-end development</p>
+                <p>Design &amp; front-end development</p>
                 <ul>
                     <li><a href="docs/resume-kilian-frey.doc">resumé</a></li>
                     <li><a href="https://www.linkedin.com/pub/dir/Kilian/Frey">linkedin</a></li>
@@ -46,7 +46,7 @@
             <div class="pure-u-1-8"></div>
         </div>
 
-        <!-- Piece 1 -->
+<!-- Piece 1 -->
 
 <div class="project project-1">
 
@@ -69,8 +69,9 @@
             <div class="pure-u-1-6"></div>
             <div class="pure-u-2-3">
                 <h2>University of Washington Homepage</h2>
-                <p><b>Responsibilities:</b> Design, HTML, and CSS. Assitance in JS and PHP</p>
+                <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+                <p><b>Link:</b><a href="http://www.uw.edu/"></p>
             </div>
             <div class="pure-u-1-6"></div>
         </div>
@@ -78,7 +79,7 @@
 </div>
 
 
-
+<!-- Piece 2 -->
 
 <div class="project project-2 dark">
 
@@ -100,15 +101,18 @@
         <div class="pure-g info">
             <div class="pure-u-1-6"></div>
             <div class="pure-u-2-3">
-                <h2>University of Washington Homepage</h2>
-                <p><b>Responsibilities:</b> Design, HTML, and CSS. Assitance in JS and PHP</p>
+                <h2>UW student experience site</h2>
+                <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+                <p><b>Link:</b><a href="http://www.uw.edu/boundless"></p>
             </div>
             <div class="pure-u-1-6"></div>
         </div>
 
 </div>
 
+
+<!-- Piece 3 -->
 
 <div class="project project-3">
 
@@ -130,15 +134,18 @@
         <div class="pure-g info">
             <div class="pure-u-1-6"></div>
             <div class="pure-u-2-3">
-                <h2>University of Washington Homepage</h2>
-                <p><b>Responsibilities:</b> Design, HTML, and CSS. Assitance in JS and PHP</p>
+                <h2>UW brand portal</h2>
+                <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+                <p><b>Link:</b><a href="http://www.uw.edu/brand"></p>
             </div>
             <div class="pure-u-1-6"></div>
         </div>
 
 </div>
 
+
+<!-- Piece 4 -->
 
 <div class="project project-4 dark">
 
@@ -160,15 +167,18 @@
         <div class="pure-g info">
             <div class="pure-u-1-6"></div>
             <div class="pure-u-2-3">
-                <h2>University of Washington Homepage</h2>
-                <p><b>Responsibilities:</b> Design, HTML, and CSS. Assitance in JS and PHP</p>
+                <h2>New students admission</h2>
+                <p><b>Responsibilities:</b> Design, HTML, CSS, JS, and PHP.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+                <p><b>Link:</b><a href="http://www.uw.edu/newhuskies"></p>
             </div>
             <div class="pure-u-1-6"></div>
         </div>
 
 </div>
 
+
+<!-- Piece 5 -->
 
 <div class="project project-5">
 
@@ -190,17 +200,18 @@
         <div class="pure-g info">
             <div class="pure-u-1-6"></div>
             <div class="pure-u-2-3">
-                <h2>University of Washington Homepage</h2>
-                <p><b>Responsibilities:</b> Design, HTML, and CSS. Assitance in JS and PHP</p>
+                <h2>Intramural Athletics</h2>
+                <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+                <p><b>Link:</b><a href="http://www.uw.edu/brand"></p>
             </div>
             <div class="pure-u-1-6"></div>
         </div>
 
 </div>
 
-        <!-- Piece 2 -->
 
+<!-- Piece 6 -->
 
 <div class="project project-6">
 
@@ -222,9 +233,9 @@
         <div class="pure-g info">
             <div class="pure-u-1-6"></div>
             <div class="pure-u-2-3">
-                <h2>University of Washington Homepage</h2>
-                <p><b>Responsibilities:</b> Design, HTML, and CSS. Assitance in JS and PHP</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+                <h2>Orbt app prototype</h2>
+                <p><b>Responsibilities:</b> Design, Prototyping</p>
+                <p><b>Tech:</b> Origami (Quartz Composer)</p>
             </div>
             <div class="pure-u-1-6"></div>
         </div>
@@ -232,7 +243,6 @@
 </div>
 
 
-        <!-- Piece 3 -->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
