--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h2>University of Washington Homepage</h2>
                 <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
-                <p><b>Link:</b><a href="http://www.uw.edu/"></p>
+                <p><b>Link:</b><a href="http://www.uw.edu/">uw.edu</a></p>
             </div>
             <div class="pure-u-1-6"></div>
         </div>
@@ -104,7 +104,7 @@
                 <h2>UW student experience site</h2>
                 <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
-                <p><b>Link:</b><a href="http://www.uw.edu/boundless"></p>
+                <p><b>Link:</b><a href="http://www.uw.edu/boundless">uw.edu/boundless</a></p>
             </div>
             <div class="pure-u-1-6"></div>
         </div>
@@ -137,7 +137,7 @@
                 <h2>UW brand portal</h2>
                 <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
-                <p><b>Link:</b><a href="http://www.uw.edu/brand"></p>
+                <p><b>Link:</b><a href="http://www.uw.edu/brand">uw.edu/brand</a></p>
             </div>
             <div class="pure-u-1-6"></div>
         </div>
@@ -170,7 +170,7 @@
                 <h2>New students admission</h2>
                 <p><b>Responsibilities:</b> Design, HTML, CSS, JS, and PHP.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
-                <p><b>Link:</b><a href="http://www.uw.edu/newhuskies"></p>
+                <p><b>Link:</b><a href="http://www.uw.edu/newhuskies">uw.edu/newhuskies</a></p>
             </div>
             <div class="pure-u-1-6"></div>
         </div>
@@ -203,7 +203,7 @@
                 <h2>Intramural Athletics</h2>
                 <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
-                <p><b>Link:</b><a href="http://www.uw.edu/brand"></p>
+                <p><b>Link:</b><a href="http://www.uw.edu/ima">uw.edu/ima</a></p>
             </div>
             <div class="pure-u-1-6"></div>
         </div>
