--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <!-- Personal info -->
 
         <div class="pure-g header">
-            <div class="pure-u-1-8"></div>
-            <div class="pure-u-3-4">
+            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-md-3-4">
 
                 <h1>Kilian Frey</h1>
                 <p>Design &amp; front-end development</p>
@@ -43,7 +43,7 @@
     
 
             </div>
-            <div class="pure-u-1-8"></div>
+            <div class="pure-u-md-1-8"></div>
         </div>
 
 <!-- Piece 1 -->
@@ -51,29 +51,29 @@
 <div class="project project-1">
 
         <div class="pure-g images">
-            <div class="pure-u-1-8"></div>
-            <div class="pure-u-3-4">
+            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-md-3-4">
                 <div class="pure-g">
-                    <div class="pure-u-3-4 desktop">
+                    <div class="pure-u-md-3-4 desktop">
                         <img src="img/project-1-homepage.jpg">
                     </div>
-                    <div class="pure-u-1-4 mobile">
+                    <div class="pure-u-md-1-4 mobile">
                         <img src="img/project-1-homepage-mobile.png">
                     </div>
                 </div>
             </div>
-            <div class="pure-u-1-8"></div>
+            <div class="pure-u-md-1-8"></div>
         </div>
 
         <div class="pure-g info">
-            <div class="pure-u-1-6"></div>
-            <div class="pure-u-2-3">
-                <h2>University of Washington Homepage</h2>
+            <div class="pure-u-1-4 pure-u-md-1-6"></div>
+            <div class="pure-u-1-2 pure-u-md-2-3">
+                <h2>UW Homepage</h2>
                 <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/">uw.edu</a></p>
             </div>
-            <div class="pure-u-1-6"></div>
+            <div class="pure-u-1-4 pure-u-md-1-6"></div>
         </div>
 
 </div>
@@ -84,29 +84,29 @@
 <div class="project project-2 dark">
 
         <div class="pure-g images">
-            <div class="pure-u-1-8"></div>
-            <div class="pure-u-3-4">
+            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-md-3-4">
                 <div class="pure-g">
-                    <div class="pure-u-3-4 desktop">
+                    <div class="pure-u-md-3-4 desktop">
                         <img src="img/project-2-boundless.jpg">
                     </div>
-                    <div class="pure-u-1-4 mobile">
+                    <div class="pure-u-md-1-4 mobile">
                         <img src="img/project-2-boundless-mobile.png">
                     </div>
                 </div>
             </div>
-            <div class="pure-u-1-8"></div>
+            <div class="pure-u-md-1-8"></div>
         </div>
 
         <div class="pure-g info">
-            <div class="pure-u-1-6"></div>
-            <div class="pure-u-2-3">
+            <div class="pure-u-1-4 pure-u-md-1-6"></div>
+            <div class="pure-u-1-2 pure-u-md-2-3">
                 <h2>UW student experience site</h2>
                 <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/boundless">uw.edu/boundless</a></p>
             </div>
-            <div class="pure-u-1-6"></div>
+            <div class="pure-u-1-4 pure-u-md-1-6"></div>
         </div>
 
 </div>
@@ -117,29 +117,29 @@
 <div class="project project-3">
 
         <div class="pure-g images">
-            <div class="pure-u-1-8"></div>
-            <div class="pure-u-3-4">
+            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-md-3-4">
                 <div class="pure-g">
-                    <div class="pure-u-3-4 desktop">
+                    <div class="pure-u-md-3-4 desktop">
                         <img src="img/project-3-brand.jpg">
                     </div>
-                    <div class="pure-u-1-4 mobile">
+                    <div class="pure-u-md-1-4 mobile">
                         <img src="img/project-3-brand-mobile.png">
                     </div>
                 </div>
             </div>
-            <div class="pure-u-1-8"></div>
+            <div class="pure-u-md-1-8"></div>
         </div>
 
         <div class="pure-g info">
-            <div class="pure-u-1-6"></div>
-            <div class="pure-u-2-3">
+            <div class="pure-u-1-4 pure-u-md-1-6"></div>
+            <div class="pure-u-1-2 pure-u-md-2-3">
                 <h2>UW brand portal</h2>
                 <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/brand">uw.edu/brand</a></p>
             </div>
-            <div class="pure-u-1-6"></div>
+            <div class="pure-u-1-4 pure-u-md-1-6"></div>
         </div>
 
 </div>
@@ -150,29 +150,29 @@
 <div class="project project-4 dark">
 
         <div class="pure-g images">
-            <div class="pure-u-1-8"></div>
-            <div class="pure-u-3-4">
+            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-md-3-4">
                 <div class="pure-g">
-                    <div class="pure-u-3-4 desktop">
+                    <div class="pure-u-md-3-4 desktop">
                         <img src="img/project-4-admissions.jpg">
                     </div>
-                    <div class="pure-u-1-4 mobile">
+                    <div class="pure-u-md-1-4 mobile">
                         <img src="img/project-4-admissions-mobile.png">
                     </div>
                 </div>
             </div>
-            <div class="pure-u-1-8"></div>
+            <div class="pure-u-md-1-8"></div>
         </div>
 
         <div class="pure-g info">
-            <div class="pure-u-1-6"></div>
-            <div class="pure-u-2-3">
+            <div class="pure-u-1-4 pure-u-md-1-6"></div>
+            <div class="pure-u-1-2 pure-u-md-2-3">
                 <h2>New students admission</h2>
                 <p><b>Responsibilities:</b> Design, HTML, CSS, JS, and PHP.</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/newhuskies">uw.edu/newhuskies</a></p>
             </div>
-            <div class="pure-u-1-6"></div>
+            <div class="pure-u-1-4 pure-u-md-1-6"></div>
         </div>
 
 </div>
@@ -183,29 +183,29 @@
 <div class="project project-5">
 
         <div class="pure-g images">
-            <div class="pure-u-1-8"></div>
-            <div class="pure-u-3-4">
+            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-md-3-4">
                 <div class="pure-g">
-                    <div class="pure-u-3-4 desktop">
+                    <div class="pure-u-md-3-4 desktop">
                         <img src="img/project-5-ima.jpg">
                     </div>
-                    <div class="pure-u-1-4 mobile">
+                    <div class="pure-u-md-1-4 mobile">
                         <img src="img/project-5-ima-mobile.png">
                     </div>
                 </div>
             </div>
-            <div class="pure-u-1-8"></div>
+            <div class="pure-u-md-1-8"></div>
         </div>
 
         <div class="pure-g info">
-            <div class="pure-u-1-6"></div>
-            <div class="pure-u-2-3">
+            <div class="pure-u-1-4 pure-u-md-1-6"></div>
+            <div class="pure-u-1-2 pure-u-md-2-3">
                 <h2>Intramural Athletics</h2>
                 <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Node.js</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/ima">uw.edu/ima</a></p>
             </div>
-            <div class="pure-u-1-6"></div>
+            <div class="pure-u-1-4 pure-u-md-1-6"></div>
         </div>
 
 </div>
@@ -216,28 +216,28 @@
 <div class="project project-6">
 
         <div class="pure-g images">
-            <div class="pure-u-1-8"></div>
-            <div class="pure-u-3-4">
+            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-md-3-4">
                 <div class="pure-g">
-                    <div class="pure-u-1-4">
+                    <div class="pure-u-md-1-4">
                         <img src="img/orb.gif">
                     </div>
-                    <div class="pure-u-3-4">
+                    <div class="pure-u-md-3-4">
                         <img src="img/project-6-orbt.jpg">
                     </div>
                 </div>
             </div>
-            <div class="pure-u-1-8"></div>
+            <div class="pure-u-md-1-8"></div>
         </div>
 
         <div class="pure-g info">
-            <div class="pure-u-1-6"></div>
-            <div class="pure-u-2-3">
+            <div class="pure-u-1-4 pure-u-md-1-6"></div>
+            <div class="pure-u-1-2 ure-u-md-2-3">
                 <h2>Orbt app prototype</h2>
                 <p><b>Responsibilities:</b> Design, Prototyping</p>
                 <p><b>Tech:</b> Origami (Quartz Composer)</p>
             </div>
-            <div class="pure-u-1-6"></div>
+            <div class="pure-u-1-4 pure-u-md-1-6"></div>
         </div>
 
 </div>
