--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <!-- Personal info -->
 
         <div class="pure-g header">
-            <div class="pure-u-md-1-8"></div>
-            <div class="pure-u-md-3-4">
+            <div class="pure-u-0 pure-u-md-1-8"></div>
+            <div class="pure-u-1 pure-u-md-3-4">
 
                 <h1>Kilian Frey</h1>
                 <p>Design &amp; front-end development</p>
@@ -43,7 +43,7 @@
     
 
             </div>
-            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-0 pure-u-md-1-8"></div>
         </div>
 
 <!-- Piece 1 -->
