--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Kilian Frey \\ Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -40,9 +40,9 @@
             <div class="pure-u-1 pure-u-md-3-4">
 
                 <h1>Kilian Frey</h1>
-                <p>Design &amp; front-end development</p>
+                <p>Design &amp; front end development</p>
                 <ul>
-                    <li><a href="docs/resume-kilian-frey.doc">resumé</a></li>
+                    <li><a href="docs/resume-kilian-frey.docx">resumé</a></li>
                     <li><a href="https://www.linkedin.com/pub/dir/Kilian/Frey">linkedin</a></li>
                     <li><a href="mailto:kilian.frey@gmail.com">email</a></li>
                 </ul>
@@ -240,7 +240,7 @@
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-1-2 ure-u-md-2-3">
                 <h2>Orbt app prototype</h2>
-                <p><b>Responsibilities:</b> Design, Prototyping</p>
+                <p><b>Responsibilities:</b> Design, Full-app prototyping.</p>
                 <p><b>Tech:</b> Origami (Quartz Composer)</p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
