--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p>Design &amp; front end development</p>
                 <ul>
                     <li><a href="docs/resume-kilian-frey.docx">resumé</a></li>
-                    <li><a href="https://www.linkedin.com/pub/dir/Kilian/Frey">linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/kilianfrey">linkedin</a></li>
                     <li><a href="mailto:kilian.frey@gmail.com">email</a></li>
                 </ul>
     
