--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Kilian Frey \\ Portfolio</title>
+        <title>Kilian Frey // Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,7 +21,6 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/custom.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
 
@@ -76,7 +75,7 @@
             <div class="pure-u-3-4 pure-u-md-2-3">
                 <h2>UW Homepage</h2>
                 <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/">uw.edu</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
@@ -109,7 +108,7 @@
             <div class="pure-u-3-4 pure-u-md-2-3">
                 <h2>UW student experience site</h2>
                 <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/boundless">uw.edu/boundless</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
@@ -142,7 +141,7 @@
             <div class="pure-u-3-4 pure-u-md-2-3">
                 <h2>UW brand portal</h2>
                 <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/brand">uw.edu/brand</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
@@ -175,7 +174,7 @@
             <div class="pure-u-3-4 pure-u-md-2-3">
                 <h2>New students admission</h2>
                 <p><b>Responsibilities:</b> Design, HTML, CSS, JS, and PHP.</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/newhuskies">uw.edu/newhuskies</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
@@ -208,7 +207,7 @@
             <div class="pure-u-3-4 pure-u-md-2-3">
                 <h2>Intramural Athletics</h2>
                 <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/ima">uw.edu/ima</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
@@ -249,20 +248,5 @@
 </div>
 
 
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
     </body>
 </html>
