--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
                 <h2>UW student experience site</h2>
-                <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
+                <p><b>Responsibilities:</b> Design, HTML, CSS, JS, and PHP.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/boundless">uw.edu/boundless</a></p>
             </div>
@@ -150,19 +150,17 @@
 </div>
 
 
-<!-- Piece 4 -->
-
-<div class="project project-4 dark">
+<div class="project project-7 dark">
 
         <div class="pure-g images">
             <div class="pure-u-md-1-8"></div>
             <div class="pure-u-md-3-4">
                 <div class="pure-g">
                     <div class="pure-u-md-3-4 desktop">
-                        <img src="img/project-4-admissions.jpg">
+                        <img src="img/project-7-maps.jpg">
                     </div>
                     <div class="pure-u-md-1-4 mobile">
-                        <img src="img/project-4-admissions-mobile.png">
+                        <img src="img/project-7-maps-mobile.png">
                     </div>
                 </div>
             </div>
@@ -172,15 +170,16 @@
         <div class="pure-g info">
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
-                <h2>New students admission</h2>
-                <p><b>Responsibilities:</b> Design, HTML, CSS, JS, and PHP.</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
-                <p><b>Link: </b><a href="http://www.uw.edu/newhuskies">uw.edu/newhuskies</a></p>
+                <h2>Shenandoah Campus Map</h2>
+                <p><b>Responsibilities:</b> Design, HTML, CSS</p>
+                <p><b>Tech:</b> WordPress, SASS, Git, Grunt, Backbone.js, Materialize</p>
+                <p><b>Link: </b><a href="http://www.su.edu/campus-maps/">su.edu/campus-maps</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
         </div>
 
 </div>
+
 
 
 <!-- Piece 5 -->
@@ -209,6 +208,39 @@
                 <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/ima">uw.edu/ima</a></p>
+            </div>
+            <div class="pure-u-1-8 pure-u-md-1-6"></div>
+        </div>
+
+</div>
+
+
+<!-- Piece 7 -->
+
+<div class="project project-4 dark">
+
+        <div class="pure-g images">
+            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-md-3-4">
+                <div class="pure-g">
+                    <div class="pure-u-md-3-4 desktop">
+                        <img src="img/project-4-admissions.jpg">
+                    </div>
+                    <div class="pure-u-md-1-4 mobile">
+                        <img src="img/project-4-admissions-mobile.png">
+                    </div>
+                </div>
+            </div>
+            <div class="pure-u-md-1-8"></div>
+        </div>
+
+        <div class="pure-g info">
+            <div class="pure-u-1-8 pure-u-md-1-6"></div>
+            <div class="pure-u-3-4 pure-u-md-2-3">
+                <h2>New students admission</h2>
+                <p><b>Responsibilities:</b> Design, HTML, CSS, JS, and PHP.</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
+                <p><b>Link: </b><a href="http://www.uw.edu/newhuskies">uw.edu/newhuskies</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
         </div>
