--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <li><a href="docs/resume-kilian-frey.docx">resumé</a></li>
                     <li><a href="https://www.linkedin.com/in/kilianfrey">linkedin</a></li>
                     <li><a href="mailto:kilian.frey@gmail.com">email</a></li>
+                    <li><a href="https://github.com/kilianf">github</a></li>
                 </ul>
     
 
