--- a/greater/index.html
+++ b/greater/index.html
@@ -18,7 +18,7 @@
     <link href="css/grayscale.css" rel="stylesheet">
 
     <!-- Parallaxy CSS -->
-    <link href="parallaxy/parallaxy.css" rel="stylesheet"> -->
+    <link href="parallaxy/parallaxy.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <script src="https://use.typekit.net/zfm8ttb.js"></script>
@@ -42,9 +42,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    Greater Foundation
-                </a>
+                <a class="navbar-brand page-scroll" href="#page-top">Greater Foundation</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,8 +78,8 @@
     <header class="intro">
 
         <div class="fullscreen-bg">
-            <video loop muted autoplay class="fullscreen-bg__video">
-                <source src="img/53681280.mp4" type="video/mp4">
+            <video loop muted autoplay poster="img/poster.jpg" class="fullscreen-bg__video">
+                <source src="img/street_720_trim.mp4" type="video/mp4">
             </video>
         </div>
 
@@ -275,7 +273,7 @@
                     <span>
                         <h4>Russell Okung</h4>
                         <p>Co-founder and President</p>
-                        <p><a href="#">GREATER Foundation</a></p>
+                        <p>GREATER Foundation</p>
                     </span>
                 </div>
                 <div class="pax-2">
