Made V1 edits including new graphics

--- a/greater/index.html
+++ b/greater/index.html
@@ -164,6 +164,15 @@
                                                   110.143,9.589 110.143,9.589 110.143,9.589 110.143,6.506 110.143,6.506 "/>
                                               </svg>
 
+                                              <svg version="1.1" id="bar-dot" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                                 width="21.333px" height="30.813px" viewBox="0 0 21.333 30.813" enable-background="new 0 0 21.333 30.813" xml:space="preserve">
+                                              <line fill="none" stroke="#FFFFFF" stroke-width="5" stroke-miterlimit="10" x1="2.044" y1="2.55" x2="19.538" y2="2.55"/>
+                                              <circle fill="#939598" cx="4.544" cy="14.183" r="2.5"/>
+                                              <circle fill="#939598" cx="17.038" cy="14.183" r="2.5"/>
+                                              <circle fill="#939598" cx="4.544" cy="26.682" r="2.5"/>
+                                              <circle fill="#939598" cx="17.038" cy="26.682" r="2.5"/>
+                                              </svg>
+
 
                                               <div id="slashes">
                                                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -192,19 +201,7 @@
                                               <polygon fill="#939598" points="195.418,17.901 190.436,17.901 184.939,26.257 187.445,30.023 "/>
                                               <polygon fill="#939598" points="167.424,31.356 175.398,19.235 170.415,19.235 164.919,27.59 "/>
                                               <rect fill="#FFFFFF" width="235.193" height="5.5"/>
-                                              </svg>
-
-
-                                            <div id="join">
-                                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                                     width="20.502px" height="10.505px" viewBox="0 0 20.502 10.505" enable-background="new 0 0 20.502 10.505" xml:space="preserve">
-                                                <polygon fill="#FFFFFF" points="20.232,3.643 15.062,0.242 12.732,1.792 17.889,5.185 12.732,8.577 15.062,10.126 20.232,6.726 
-                                                    20.232,6.726 20.232,6.726 20.232,3.643 20.232,3.643 "/>
-                                                <polygon fill="#FFFFFF" points="7.738,3.643 2.568,0.242 0.238,1.792 5.395,5.185 0.238,8.577 2.568,10.126 7.738,6.726 
-                                                    7.738,6.726 7.738,6.726 7.738,3.643 7.738,3.643 "/>
-                                                </svg>
-                                                <a href="#">Join the movement <br/>2/25/16.</a>
-                                            </div>
+                                              </svg>                                          
 
 
                       </div>
@@ -264,6 +261,19 @@
 
 
         </div>
+        <div id="join">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 width="20.502px" height="10.505px" viewBox="0 0 20.502 10.505" enable-background="new 0 0 20.502 10.505" xml:space="preserve">
+            <polygon fill="#FFFFFF" points="20.232,3.643 15.062,0.242 12.732,1.792 17.889,5.185 12.732,8.577 15.062,10.126 20.232,6.726 
+                20.232,6.726 20.232,6.726 20.232,3.643 20.232,3.643 "/>
+            <polygon fill="#FFFFFF" points="7.738,3.643 2.568,0.242 0.238,1.792 5.395,5.185 0.238,8.577 2.568,10.126 7.738,6.726 
+                7.738,6.726 7.738,6.726 7.738,3.643 7.738,3.643 "/>
+            </svg>
+            <a href="#">Join the movement <br/>2/25/16.</a>
+        </div>
+
+
+
     </header>
 
     <!-- About Section -->
@@ -985,29 +995,66 @@
             <div class="row">
 
                 <div class="col-md-4 col-md-offset-1 movement-quote">               
-                    <svg version="1.1" id="movement-dots" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                         width="81.493px" height="82.065px" viewBox="0 0 81.493 82.065" enable-background="new 0 0 81.493 82.065" xml:space="preserve">
-                    <circle fill="#939598" cx="2.5" cy="2.5" r="2.5"/>
-                    <circle fill="#939598" cx="27.5" cy="2.5" r="2.5"/>
-                    <circle fill="#939598" cx="52.417" cy="2.5" r="2.5"/>
-                    <circle fill="#939598" cx="77.417" cy="2.5" r="2.5"/>
-                    <circle fill="#939598" cx="2.5" cy="27.5" r="2.5"/>
-                    <circle fill="#939598" cx="27.5" cy="27.5" r="2.5"/>
-                    <circle fill="#939598" cx="52.417" cy="27.5" r="2.5"/>
-                    <circle fill="#939598" cx="77.417" cy="27.5" r="2.5"/>
-                    <circle fill="#939598" cx="2.5" cy="52.5" r="2.5"/>
-                    <circle fill="#939598" cx="27.5" cy="52.5" r="2.5"/>
-                    <circle fill="#939598" cx="52.417" cy="52.5" r="2.5"/>
-                    <circle fill="#939598" cx="77.417" cy="52.5" r="2.5"/>
-                    <circle fill="#939598" cx="2.5" cy="77.5" r="2.5"/>
-                    <circle fill="#939598" cx="27.5" cy="77.5" r="2.5"/>
-                    <circle fill="#939598" cx="52.417" cy="77.5" r="2.5"/>
-                    <circle fill="#939598" cx="77.417" cy="77.5" r="2.5"/>
-                    </svg>
+                  <svg version="1.1" id="movement-dots" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     width="110.472px" height="111.123px" viewBox="0 0 110.472 111.123" enable-background="new 0 0 110.472 111.123"
+                     xml:space="preserve">
+                  <circle fill="#939598" cx="5.595" cy="31.165" r="2.5"/>
+                  <circle fill="#939598" cx="30.595" cy="31.165" r="2.5"/>
+                  <circle fill="#939598" cx="55.512" cy="31.165" r="2.5"/>
+                  <circle fill="#939598" cx="80.512" cy="31.165" r="2.5"/>
+                  <circle fill="#939598" cx="105.512" cy="31.165" r="2.5"/>
+                  <circle fill="#939598" cx="5.595" cy="56.165" r="2.5"/>
+                  <circle fill="#939598" cx="30.595" cy="56.165" r="2.5"/>
+                  <circle fill="#939598" cx="55.512" cy="56.165" r="2.5"/>
+                  <circle fill="#939598" cx="80.512" cy="56.165" r="2.5"/>
+                  <circle fill="#939598" cx="105.512" cy="56.165" r="2.5"/>
+                  <circle fill="#939598" cx="5.595" cy="81.165" r="2.5"/>
+                  <circle fill="#939598" cx="30.595" cy="81.165" r="2.5"/>
+                  <circle fill="#939598" cx="55.512" cy="81.165" r="2.5"/>
+                  <circle fill="#939598" cx="80.512" cy="81.165" r="2.5"/>
+                  <circle fill="#939598" cx="105.512" cy="81.165" r="2.5"/>
+                  <circle fill="#939598" cx="5.595" cy="106.165" r="2.5"/>
+                  <circle fill="#939598" cx="30.595" cy="106.165" r="2.5"/>
+                  <circle fill="#939598" cx="55.512" cy="106.165" r="2.5"/>
+                  <circle fill="#939598" cx="80.512" cy="106.165" r="2.5"/>
+                  <circle fill="#939598" cx="105.512" cy="106.165" r="2.5"/>
+                  <polygon fill="#939598" points="84.887,4.623 79.717,1.222 77.387,2.772 82.543,6.165 77.387,9.557 79.717,11.106 84.887,7.706 
+                    84.887,7.706 84.887,7.706 84.887,4.623 84.887,4.623 "/>
+                  <polygon fill="#939598" points="59.262,4.623 54.092,1.222 51.762,2.772 56.919,6.165 51.762,9.557 54.092,11.106 59.262,7.706 
+                    59.262,7.706 59.262,7.706 59.262,4.623 59.262,4.623 "/>
+                  <polygon fill="#939598" points="34.345,4.623 29.175,1.222 26.845,2.772 32.002,6.165 26.845,9.557 29.175,11.106 34.345,7.706 
+                    34.345,7.706 34.345,7.706 34.345,4.623 34.345,4.623 "/>
+                  <polygon fill="#939598" points="9.345,4.623 4.175,1.222 1.845,2.772 7.002,6.165 1.845,9.557 4.175,11.106 9.345,7.706 
+                    9.345,7.706 9.345,7.706 9.345,4.623 9.345,4.623 "/>
+                  <polygon fill="#939598" points="109.262,4.623 104.092,1.222 101.762,2.772 106.919,6.165 101.762,9.557 104.092,11.106 
+                    109.262,7.706 109.262,7.706 109.262,7.706 109.262,4.623 109.262,4.623 "/>
+                  </svg>
+
 
                     <p><b>Technology companies are hungry for diversity. Diversity in background, in thinking, in education.</b></p>
 
                     <img src="img/stairs.jpg" width=100% height=auto/>
+
+
+                  <div id="movement-slashes">
+
+                    <p>#005</p>
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     width="151.525px" height="12.122px" viewBox="0 0 151.525 12.122" enable-background="new 0 0 151.525 12.122"
+                     xml:space="preserve">
+                    <g>
+                      <polygon fill="#939598" points="90.205,0 85.223,0 79.726,8.355 82.231,12.122    "/>
+                      <polygon fill="#939598" points="70.274,0 65.291,0 59.793,8.355 62.299,12.122    "/>
+                      <polygon fill="#939598" points="50.342,0 45.359,0 39.862,8.355 42.368,12.122    "/>
+                      <polygon fill="#939598" points="30.41,0 25.428,0 19.931,8.355 22.437,12.122     "/>
+                      <polygon fill="#939598" points="150,0 145.018,0 139.52,8.355 142.025,12.122     "/>
+                      <polygon fill="#939598" points="130.068,0 125.085,0 119.589,8.355 122.094,12.122    "/>
+                      <polygon fill="#939598" points="110.136,0 105.154,0 99.657,8.355 102.163,12.122     "/>
+                      <polygon fill="#939598" points="2.505,12.122 10.479,0 5.496,0 0,8.355   "/>
+                    </g>
+                    </svg>
+                  </div>
+
 
                 </div>
                 <div class="col-md-5 col-md-offset-1 about-left">
@@ -1050,7 +1097,7 @@
 
   <!-- About Section -->
     <section id="story" class="container content-section general">
-        <div class="row">
+        <div class="row">            
             <div data-parallaxy class="col-md-10 col-md-offset-1 story-pic">
                     <img src="img/arch.jpg">                   
             </div>
@@ -1082,6 +1129,21 @@
             </div>
 
             <div class="col-md-6 col-md-offset-1 story-right">
+
+              <svg version="1.1" id="story-slash" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+               width="151.525px" height="12.122px" viewBox="0 0 151.525 12.122" enable-background="new 0 0 151.525 12.122"
+               xml:space="preserve">
+              <g>
+                <polygon fill="#939598" points="90.205,0 85.223,0 79.726,8.355 82.231,12.122    "/>
+                <polygon fill="#939598" points="70.274,0 65.291,0 59.793,8.355 62.299,12.122    "/>
+                <polygon fill="#939598" points="50.342,0 45.359,0 39.862,8.355 42.368,12.122    "/>
+                <polygon fill="#939598" points="30.41,0 25.428,0 19.931,8.355 22.437,12.122     "/>
+                <polygon fill="#939598" points="150,0 145.018,0 139.52,8.355 142.025,12.122     "/>
+                <polygon fill="#939598" points="130.068,0 125.085,0 119.589,8.355 122.094,12.122    "/>
+                <polygon fill="#939598" points="110.136,0 105.154,0 99.657,8.355 102.163,12.122     "/>
+                <polygon fill="#939598" points="2.505,12.122 10.479,0 5.496,0 0,8.355   "/>
+              </g>
+              </svg>
 
 <p>From the football field to the business world, Russ and Andrew have chosen to be their brothers’ keepers.</p>
 
